# JSerial

./: .gitignore  JSerial-Common.gradle  LICENSE  README.md  allclasses-frame.html  allclasses-noframe.html  build.gradle  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html  settings.gradle
JSerial/: build.gradle  settings.gradle
JSerial-API/: build.gradle
JSerial-API/src/dk/thibaut/serial/: Parity.java  SerialChannel.java  SerialConfig.java  SerialException.java  SerialNative.java  SerialPort.java
JSerial-API/test/: TestSerialPort.java
JSerial-Linux/: build.gradle
JSerial-Linux/src/dk/thibaut/serial/: SerialNativeLinux.java
JSerial-Windows/: build.gradle
JSerial-Windows/src/dk/thibaut/serial/: SerialNativeWindows.java  SerialPortWindows.java  SerialPortWindowsProvider.java
JSerial/src/dk/thibaut/serial/: BaudRate.java  DataBits.java  SerialChannel.java  SerialChannelWindows.java  SerialConfig.java  SerialException.java  SerialPort.java  (+3 more)
JSerial/test/: TestSerialPort.java  TestSerialPortWindows.java
Linux/: CMakeLists.txt  JNI.c  JSerial.c  JSerial.h
Windows/: JSerial.c  JSerial.h  JSerial.sln  JSerial.vcxproj
dk/thibaut/serial/: SerialChannel.html  SerialConfig.html  SerialException.html  SerialPort.html  package-frame.html  package-summary.html  package-tree.html
dk/thibaut/serial/enums/: BaudRate.html  DataBits.html  Parity.html  StopBits.html  package-frame.html  package-summary.html  package-tree.html
(+5 files in other folders)
